# ecoStream

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: constants.py
app/enums/: wmo_codes.py
app/exceptions/: __init__.py  validation_exceptions.py
app/ingestion/: abstract_api.py  abstract_kafka_service.py  kafka_consumer.py  kafka_producer.py  main.py  open_meteo_api.py  open_weather.py
docker/: .gitignore  kafka.yaml
docker/kafka/data/: bootstrap.checkpoint  meta.properties
scripts/: run_coverage_check.sh
tests/integration/: test_apis.py
tests/unit/: test_kafka_producer.py  test_services.py
